--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
             </ul>
         </div>
     </nav>
+    <header class="hero">
+        <div class="container">
+            <div class="main-text">
+                <h1></h1>
+                <p></p>
+                <button type="submit"></button>
+            </div>
+            <img src="./assets/asset1.jpg" alt="hero-image">
+        </div>
+    </header>
 </body>
 </html>
