Add sectionA containers + element

--- a/index.html
+++ b/index.html
@@ -22,10 +22,30 @@
             <div class="main-text">
                 <h1></h1>
                 <p></p>
-                <button type="submit"></button>
+                <button type="submit">Sign up</button>
             </div>
             <img src="./assets/asset1.jpg" alt="hero-image">
         </div>
     </header>
+    <section class="sectionA">
+        <div class="container">
+            <div class="box">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="box">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="box">
+                <img src="" alt="">
+                <p></p>
+            </div>
+            <div class="box">
+                <img src="" alt="">
+                <p></p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
