Add 2 more section container + child containers

--- a/index.html
+++ b/index.html
@@ -47,5 +47,19 @@
             </div>
         </div>
     </section>
+    <section class="sectionB">
+        <div class="container">
+            <h2></h3>
+        </div>
+    </section>
+    <section class="sectionC">
+        <div class="container">
+            <div class="calltoaction">
+                <h3></h3>
+                <p></p>
+            </div>
+            <button type="submit">Sign up</button>
+        </div>
+    </section>
 </body>
 </html>
