Add footer container + child element container

--- a/index.html
+++ b/index.html
@@ -61,5 +61,10 @@
             <button type="submit">Sign up</button>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div>Copyright &copy; Qudus Lawal 2023</div>
+        </div>
+    </footer>
 </body>
 </html>
