Input h1 text + paragraph text

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <header class="hero">
         <div class="container">
             <div class="main-text">
-                <h1></h1>
-                <p></p>
+                <h1>Welcome to Home-Schoolers</h1>
+                <p>The No 1 home-schooling institute forged to fine tune your ward into the future leader you desire</p>
                 <button type="submit">Sign up</button>
             </div>
             <img src="./assets/asset1.jpg" alt="hero-image">
