Input Section A contents

--- a/index.html
+++ b/index.html
@@ -30,27 +30,31 @@
     </header>
     <section class="sectionA">
         <div class="container">
-            <div class="box">
-                <img src="" alt="">
-                <p></p>
+            <div class="product">
+                <div class="curriculum">curriculum</div>
+                <p>Offering the blend of Islamic learning, western learning, Information technology & Mind building, we have carefully selected and designed our curriculum.</p>
             </div>
             <div class="box">
-                <img src="" alt="">
-                <p></p>
+                <img src="./assets/asset2.jpg" alt="Western Education">
+                <p>We offer the best western learning, with focus on important subject matters</p>
             </div>
             <div class="box">
-                <img src="" alt="">
-                <p></p>
+                <img src="./assets/asset5.jpg" alt="Islamic learning">
+                <p>Islamic learning is of utmost priority to us thus we leave no stone untouched</p>
             </div>
             <div class="box">
-                <img src="" alt="">
-                <p></p>
+                <img src="./assets/asset4.jpg" alt="Mind Building">
+                <p>We help guide your lad to building the right mindset</p>
+            </div>
+            <div class="box">
+                <img src="./assets/asset6.jpg" alt="Information technology">
+                <p>When it comes to IT we are a game changer</p>
             </div>
         </div>
     </section>
     <section class="sectionB">
         <div class="container">
-            <h2></h3>
+            <h2></h2>
         </div>
     </section>
     <section class="sectionC">
