Input sectionC content

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
     </header>
     <section class="sectionA">
         <div class="container">
-            <div class="product">
-                <div class="curriculum">curriculum</div>
-                <p>Offering the blend of Islamic learning, western learning, Information technology & Mind building, we have carefully selected and designed our curriculum.</p>
-            </div>
+            <div class="box">curriculum</div>
+            
             <div class="box">
                 <img src="./assets/asset2.jpg" alt="Western Education">
                 <p>We offer the best western learning, with focus on important subject matters</p>
@@ -54,13 +52,13 @@
     </section>
     <section class="sectionB">
         <div class="container">
-            <h2></h2>
+            <h3>At Home-Schoolers we offer the best blend of Islamic, Western, Information Technology & Mind-building education. Our Tutors are vast in the knowledge of Islamic sciences while showing proficiencies in western, IT and mind-building learning. They are the best a child can have.</h3>
         </div>
     </section>
     <section class="sectionC">
         <div class="container">
             <div class="calltoaction">
-                <h3></h3>
+                <h2></h2>
                 <p></p>
             </div>
             <button type="submit">Sign up</button>
