Input sectionC content

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <section class="sectionC">
         <div class="container">
             <div class="calltoaction">
-                <h2></h2>
-                <p></p>
+                <h2>Leaders take action not dream</h2>
+                <p>Enroll your ward with us now!</p>
             </div>
             <button type="submit">Sign up</button>
         </div>
