Place h2 in div

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </header>
     <section class="sectionA">
         <div class="container">
-            <div class="box">curriculum</div>
+            <div class="boxes">
+                <h2>Curriculum</h2>
+            </div>
             <div class="box">
                 <img src="./assets/asset2.jpg" alt="Western Education">
                 <p>We offer the best western learning, with focus on important subject matters</p>
@@ -44,7 +46,7 @@
                 <p>We help guide your lad to building the right mindset</p>
             </div>
             <div class="box">
-                <img src="./assets/asset6.jpg" alt="Information technology">
+                <img src="./assets/asset7.jpg" alt="Information technology">
                 <p>When it comes to IT we are a game changer</p>
             </div>
         </div>
