--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="main-text">
                 <h1>Welcome to Home-Schoolers</h1>
                 <p>The No 1 home-schooling institute forged to fine tune your ward into the future leader you desire</p>
-                <button type="submit">Sign up</button>
+                <button type="submit"><a href="#">Sign up</a></button>
             </div>
             <img src="./assets/asset1.jpg" alt="hero-image">
         </div>
