--- a/index.html
+++ b/index.html
@@ -31,22 +31,25 @@
     <section class="sectionA">
         <div class="container">
                 <h2>Curriculum</h2>
-            <div class="box">
-                <img src="./assets/asset2.jpg" alt="Western Education">
-                <p>We offer the best western learning, with focus on important subject matters</p>
-            </div>
-            <div class="box">
-                <img src="./assets/asset5.jpg" alt="Islamic learning">
-                <p>Islamic learning is of utmost priority to us thus we leave no stone untouched</p>
-            </div>
-            <div class="box">
-                <img src="./assets/asset4.jpg" alt="Mind Building">
-                <p>We help guide your lad to building the right mindset</p>
-            </div>
-            <div class="box">
-                <img src="./assets/asset7.jpg" alt="Information technology">
-                <p>When it comes to IT we are a game changer</p>
-            </div>
+            <div class="boxes">
+                <div class="box">
+                    <img src="./assets/asset2.jpg" alt="Western Education">
+                    <p>We offer the best western learning, with focus on important subject matters</p>
+                </div>
+                <div class="box">
+                    <img src="./assets/asset5.jpg" alt="Islamic learning">
+                    <p>Islamic learning is of utmost priority to us thus we leave no stone untouched</p>
+                </div>
+                <div class="box">
+                    <img src="./assets/asset4.jpg" alt="Mind Building">
+                    <p>We help guide your lad to building the right mindset</p>
+                </div>
+                <div class="box">
+                    <img src="./assets/asset7.jpg" alt="Information technology">
+                    <p>When it comes to IT we are a game changer</p>
+                </div>
+            </div>     
+            
         </div>
     </section>
     <section class="sectionB">
