Adjust image + text width size

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <div class="boxes">
                 <div class="box">
                     <img src="./assets/asset2.jpg" alt="Western Education">
-                    <p>We offer the best western learning, with focus on important subject matters</p>
+                    <p class="width">We offer the best western learning, with focus on important subject matters</p>
                 </div>
                 <div class="box">
                     <img src="./assets/asset5.jpg" alt="Islamic learning">
-                    <p>Islamic learning is of utmost priority to us thus we leave no stone untouched</p>
+                    <p class="width">Islamic learning is of utmost priority to us thus we leave no stone untouched</p>
                 </div>
                 <div class="box">
                     <img src="./assets/asset4.jpg" alt="Mind Building">
