--- a/index.html
+++ b/index.html
@@ -34,18 +34,22 @@
             <div class="boxes">
                 <div class="box">
                     <img src="./assets/asset2.jpg" alt="Western Education">
+                    <p class="tag">Western Learning</p>
                     <p class="width">We offer the best western learning, with focus on important subject matters</p>
                 </div>
                 <div class="box">
                     <img src="./assets/asset4.jpg" alt="Mind Building">
+                    <p class="tag">Mind Building</p>
                     <p>We help guide your lad to building the right mindset</p>
                 </div>
                 <div class="box">
                     <img src="./assets/asset7.jpg" alt="Information technology">
+                    <p class="tag">Technology Innovation</p>
                     <p>When it comes to IT we are a game changer</p>
                 </div>
                 <div class="box">
                     <img src="./assets/asset5.jpg" alt="Islamic learning">
+                    <p class="tag">Classical Islamic Learning</p>
                     <p class="width">Islamic learning is of utmost priority to us thus we leave no stone untouched</p>
                 </div>
             </div>     
