--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <div class="box">
                     <img src="./assets/asset4.jpg" alt="Mind Building">
                     <p class="tag">Mind Building</p>
-                    <p>We help guide your lad to building the right mindset</p>
+                    <p class="add extra">We help guide your lad to building the right mindset</p>
                 </div>
                 <div class="box">
                     <img src="./assets/asset7.jpg" alt="Information technology">
                     <p class="tag">Technology Innovation</p>
-                    <p>When it comes to IT we are a game changer</p>
+                    <p class="add">When it comes to IT we are a game changer</p>
                 </div>
                 <div class="box">
                     <img src="./assets/asset5.jpg" alt="Islamic learning">
